<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rating</string>
    <string name="author">\@Copyright DaoCaoRen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="operate_fail">Operate Fail</string>
    <string name="save">save</string>
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="phone">Phone</string>
    <string name="register_by_phone">Register By Phone</string>
    <string name="please_input_phone">Please Input Phone</string>
    <string name="please_input_sms_code">Please Input SMS Code</string>
    <string name="please_input_user_name">Input Nick Name, No Less Than 4 Length</string>
    <string name="please_input_password">Input Password, No Less Than 6 Length</string>
    <string name="caption_send_sms_code_for_input_phone">We will send sms code to your phone for security</string>
    <string name="retry_send">Retry Send</string>
    <string name="reset_password">Reset Password</string>
    <string name="has_not_receive">Has Not Receive ?</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="avatar">Avatar</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="share">Share</string>
    <string name="qq">QQ</string>
    <string name="wechat">WeChat</string>
    <string name="sina">Sina</string>
    <string name="china_smc">+86</string>

    <string name="dialog_delete_items_title">Delete items</string>
    <string name="dialog_delete_items_confirm">Yes</string>
    <string name="dialog_delete_items_cancel">No</string>
    <string name="dialog_delete_items_content">Do you want to delete all items from list?</string>
    <string name="dialog_delete_item_title">Delete item</string>
    <string name="dialog_delete_item_content">Do you want to delete this item?</string>

    <string name="toast_no_items_to_delete">There are no items to delete</string>
    <string name="toast_validation_error">Validation error</string>

    <string name="tv_label_item_id">Item id: </string>
    <string name="tv_label_box_name">Box name: </string>
    <string name="tv_label_box_size">Box slots: </string>
    <string name="tv_label_box_description">Box description: </string>
    <string name="error_must_be_number">Field must be a number</string>
    <string name="error_cannot_be_empty">Field cannot be empty</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="please_input_the_right_phone_number">please input the right phone number</string>
    <string name="please_input_the_format_password">please input more 6 char password</string>

</resources>
