<?xml version="1.0" encoding="utf-8"?>
<com.dcw.app.biz.account.LoginView
    android:id="@id/root_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!-- add some padding -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            float:fletPadding="10dp">

            <EditText
                android:id="@id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/account"/>
        </android.support.design.widget.TextInputLayout>


        <!-- password input -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            float:fletPadding="10dp">

            <EditText
                android:id="@id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"/>

    </LinearLayout>

    <LinearLayout
        android:id="@id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@id/btn_wechat"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:scaleType="centerCrop"
            android:src="@drawable/umeng_socialize_wechat"
            android:contentDescription="@string/wechat"/>

        <ImageButton
            android:id="@id/btn_qq"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:scaleType="centerCrop"
            android:src="@drawable/umeng_socialize_qq_on"
            android:contentDescription="@string/qq"/>

        <ImageButton
            android:id="@id/btn_sina"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:scaleType="centerCrop"
            android:src="@drawable/umeng_socialize_sina_on"
            android:contentDescription="@string/sina"/>

    </LinearLayout>

</com.dcw.app.biz.account.LoginView>