<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:float="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingBottom="8dp"
            android:text="@string/china_smc"
            android:textSize="@dimen/title"/>

        <!-- add some padding -->
        <android.support.design.widget.TextInputLayout
            android:id="@id/til_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            float:fletPadding="10dp">

            <EditText
                android:id="@id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_phone"
                android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:maxLines="2"
        android:text="@string/caption_send_sms_code_for_input_phone"
        android:textSize="@dimen/caption"/>

    <Button
        android:id="@id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/btn_match_parent_selector"
        android:enabled="false"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button"/>

</LinearLayout>