<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:float="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <!-- add some padding -->
        <android.support.design.widget.TextInputLayout
            android:id="@id/til_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            float:fletPadding="10dp">

            <EditText
                android:id="@id/et_sms_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_sms_code"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:singleLine="true"
            android:text="@string/has_not_receive"
            android:textSize="@dimen/caption"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_between_content_areas"
            android:linksClickable="true"
            android:singleLine="true"
            android:text="@string/retry_send"
            android:textSize="@dimen/caption"/>
    </LinearLayout>

    <Button
        android:id="@id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/btn_match_parent_selector"
        android:enabled="false"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button"/>

</LinearLayout>